--- a/build.gradle
+++ b/build.gradle
@@ -56,4 +56,5 @@ repositories {
 dependencies {
     compile "org.jetbrains.kotlin:kotlin-stdlib:$kotlinVersion"
     compile 'junit:junit:4.12'
+    compile 'org.mockito:mockito-core:1.9.5'
 }
